--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
     "@types/node": "^16.11.33",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.3",
-    "d3": "^7.4.4",
     "react": "^18.1.0",
     "react-date-range": "^1.4.0",
     "react-dom": "^18.1.0",
+    "react-google-charts": "^4.0.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-svg": "^15.0.1",
