--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
     ]
   },
   "devDependencies": {
-    "@types/react-date-range": "^1.4.3"
+    "@types/react-date-range": "^1.4.3",
+    "node-sass": "^7.0.1",
+    "sass-loader": "^13.0.0"
   }
 }
