--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "@types/node": "^16.11.33",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.3",
+    "amazon-cognito-identity-js": "^5.2.9",
+    "axios": "^0.27.2",
+    "formik": "^2.2.9",
     "react": "^18.1.0",
     "react-date-range": "^1.4.0",
     "react-dom": "^18.1.0",
