--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-date-range": "^1.4.0",
     "react-dom": "^18.1.0",
     "react-google-charts": "^4.0.0",
+    "react-helmet-async": "^1.3.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-svg": "^15.0.1",
@@ -50,6 +51,7 @@
   },
   "devDependencies": {
     "@types/react-date-range": "^1.4.3",
+    "@types/react-helmet": "^6.1.5",
     "node-sass": "^7.0.1",
     "sass-loader": "^13.0.0"
   }
