--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "axios": "^0.27.2",
     "formik": "^2.2.9",
     "react": "^18.1.0",
+    "react-cookie": "^4.1.1",
+    "react-cookies": "^0.1.1",
     "react-date-range": "^1.4.0",
     "react-dom": "^18.1.0",
     "react-google-charts": "^4.0.0",
