--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "axios": "^0.27.2",
     "formik": "^2.2.9",
     "react": "^18.1.0",
+    "react-audio-player": "^0.17.0",
     "react-cookie": "^4.1.1",
     "react-cookies": "^0.1.1",
     "react-date-range": "^1.4.0",
     "react-dom": "^18.1.0",
     "react-google-charts": "^4.0.0",
     "react-helmet-async": "^1.3.0",
+    "react-player": "^2.11.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-svg": "^15.0.1",
