--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-cookies": "^0.1.1",
     "react-date-range": "^1.4.0",
     "react-dom": "^18.1.0",
+    "react-dropzone": "^14.2.3",
     "react-google-charts": "^4.0.0",
     "react-helmet-async": "^1.3.0",
     "react-player": "^2.11.0",
