--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^18.0.3",
     "amazon-cognito-identity-js": "^5.2.9",
     "axios": "^0.27.2",
+    "date-fns": "^2.29.3",
     "formik": "^2.2.9",
     "react": "^18.1.0",
     "react-audio-player": "^0.17.0",
