--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.27.2",
     "date-fns": "^2.29.3",
     "formik": "^2.2.9",
+    "imagekitio-react": "^2.0.0",
     "react": "^18.1.0",
     "react-audio-player": "^0.17.0",
     "react-cookie": "^4.1.1",
