--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dropzone": "^14.2.3",
     "react-google-charts": "^4.0.0",
     "react-helmet-async": "^1.3.0",
+    "react-hls-player": "^3.0.7",
     "react-player": "^2.11.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
