--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-svg": "^15.0.1",
     "sass": "^1.51.0",
     "typescript": "^4.6.4",
+    "video-react": "^0.16.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -59,6 +60,7 @@
   "devDependencies": {
     "@types/react-date-range": "^1.4.3",
     "@types/react-helmet": "^6.1.5",
+    "@types/video-react": "^0.15.1",
     "node-sass": "^7.0.1",
     "sass-loader": "^13.0.0"
   }
