--- a/package.json
+++ b/package.json
@@ -3,27 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.2.0",
-    "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.0",
     "@types/node": "^16.11.33",
-    "@types/react": "^18.0.9",
-    "@types/react-dom": "^18.0.3",
+    "@types/react": "^17.0.39",
+    "@types/react-dom": "^17.0.11",
     "amazon-cognito-identity-js": "^5.2.9",
     "axios": "^0.27.2",
     "date-fns": "^2.29.3",
+    "decibel-meter": "^2.0.0",
     "formik": "^2.2.9",
-    "imagekitio-react": "^2.0.0",
-    "react": "^18.1.0",
-    "react-audio-player": "^0.17.0",
+    "react": "^16.14.0",
     "react-cookie": "^4.1.1",
     "react-cookies": "^0.1.1",
     "react-date-range": "^1.4.0",
-    "react-dom": "^18.1.0",
+    "react-dom": "^16.14.0",
     "react-dropzone": "^14.2.3",
     "react-google-charts": "^4.0.0",
     "react-helmet-async": "^1.3.0",
+    "react-hls-player": "^3.0.7",
     "react-player": "^2.11.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
