--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@tiagotrindade/audio-visualizer": "^1.2.1",
     "@types/jest": "^27.5.0",
     "@types/node": "^16.11.33",
     "@types/react": "^17.0.39",
@@ -12,20 +13,21 @@
     "date-fns": "^2.29.3",
     "decibel-meter": "^2.0.0",
     "formik": "^2.2.9",
-    "react": "^16.14.0",
+    "react": "^17.0.2",
+    "react-audio-visualizers": "^0.1.1",
     "react-cookie": "^4.1.1",
     "react-cookies": "^0.1.1",
     "react-date-range": "^1.4.0",
-    "react-dom": "^16.14.0",
+    "react-dom": "^17.0.2",
     "react-dropzone": "^14.2.3",
     "react-google-charts": "^4.0.0",
     "react-helmet-async": "^1.3.0",
-    "react-hls-player": "^3.0.7",
     "react-player": "^2.11.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-svg": "^15.0.1",
     "sass": "^1.51.0",
+    "standardized-audio-context": "^25.3.40",
     "typescript": "^4.6.4",
     "video-react": "^0.16.0",
     "web-vitals": "^2.1.4"
