--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "vokalo-platform",
   "version": "0.1.0",
   "private": true,
+  "proxy":"https://vokalo-prod.s3.eu-north-1.amazonaws.com/",
   "dependencies": {
-    "@tiagotrindade/audio-visualizer": "^1.2.1",
     "@types/jest": "^27.5.0",
     "@types/node": "^16.11.33",
     "@types/react": "^17.0.39",
@@ -14,7 +14,6 @@
     "decibel-meter": "^2.0.0",
     "formik": "^2.2.9",
     "react": "^17.0.2",
-    "react-audio-visualizers": "^0.1.1",
     "react-cookie": "^4.1.1",
     "react-cookies": "^0.1.1",
     "react-date-range": "^1.4.0",
@@ -27,7 +26,6 @@
     "react-scripts": "5.0.1",
     "react-svg": "^15.0.1",
     "sass": "^1.51.0",
-    "standardized-audio-context": "^25.3.40",
     "typescript": "^4.6.4",
     "video-react": "^0.16.0",
     "web-vitals": "^2.1.4"
