--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-google-charts": "^4.0.0",
     "react-helmet-async": "^1.3.0",
     "react-player": "^2.11.0",
+    "react-range": "^1.8.14",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-svg": "^15.0.1",
