--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-svg": "^15.0.1",
+    "react-switch": "^7.0.0",
     "react-use-measure": "^2.1.1",
     "sass": "^1.51.0",
     "typescript": "^4.6.4",
