--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "react-range": "^1.8.14",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.7.2",
+    "react-select-search": "^4.1.6",
     "react-svg": "^15.0.1",
     "react-switch": "^7.0.0",
     "react-use-measure": "^2.1.1",
