--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.27.2",
     "date-fns": "^2.29.3",
     "formik": "^2.2.9",
+    "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-cookie": "^4.1.1",
     "react-cookies": "^0.1.1",
@@ -58,6 +59,7 @@
     ]
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.194",
     "@types/react-date-range": "^1.4.3",
     "@types/react-helmet": "^6.1.5",
     "@types/video-react": "^0.15.1",
