--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "date-fns": "^2.29.3",
     "formik": "^2.2.9",
     "lodash": "^4.17.21",
+    "randomcolor": "^0.6.2",
     "react": "^17.0.2",
     "react-cookie": "^4.1.1",
     "react-cookies": "^0.1.1",
@@ -32,6 +33,7 @@
     "sass": "^1.51.0",
     "typescript": "^4.6.4",
     "video-react": "^0.16.0",
+    "wavesurfer-react": "^2.2.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -60,9 +62,11 @@
   },
   "devDependencies": {
     "@types/lodash": "^4.14.194",
+    "@types/randomcolor": "^0.5.7",
     "@types/react-date-range": "^1.4.3",
     "@types/react-helmet": "^6.1.5",
     "@types/video-react": "^0.15.1",
+    "@types/wavesurfer.js": "^6.0.6",
     "node-sass": "^7.0.1",
     "sass-loader": "^13.0.0"
   }
